Villanova_Dev1/src/objects/Medical_Detail__c.object
<CustomObject>
    <description>This object contains information related to insurance, medical conditions, and emergency contact information.</description>
    <fields>
        <fullName>Allergies__c</fullName>
        <description>Information related to allergies to: food, medicine, insect bites, etc.</description>
        <label>Allergies</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Arrival_date_time_flight__c</fullName>
        <label>Arrival date/time/flight #</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <description>City of emergency contact</description>
        <label>City</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <description>Link between Contact record and Medical Detail record</description>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Medical Details</relationshipLabel>
        <relationshipName>Medical_Details</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Departure_date_time_flight__c</fullName>
        <label>Departure date/time/flight #</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Emergency_Email__c</fullName>
        <description>Emergency contact&apos;s email address</description>
        <label>Emergency Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Emergency_Home_Phone__c</fullName>
        <description>Home phone of emergency contact</description>
        <label>Emergency Home Phone</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Emergency_Name__c</fullName>
        <description>Name of Emergency contact</description>
        <label>Emergency Name</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Emergency_Relation__c</fullName>
        <description>Relationship to emergency contact</description>
        <label>Emergency Relation</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Emergency_Work_Phone__c</fullName>
        <description>Work phone number for emergency contact</description>
        <label>Emergency Work Phone</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flying_with_Group__c</fullName>
        <description>Are they flying with the group?</description>
        <inlineHelpText>Are you flying with the group?</inlineHelpText>
        <label>Flying with Group</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Frequent_Flyer_1_Airline__c</fullName>
        <label>Frequent Flyer #1 / Airline</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Frequent_Flyer_2_Airline__c</fullName>
        <label>Frequent Flyer #2 / Airline</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Frequent_Flyer_3_Airline__c</fullName>
        <label>Frequent Flyer #3 / Airline</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Insurance_Carrier__c</fullName>
        <description>Name of the Insurance Company</description>
        <label>Insurance Carrier</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Insurance_Group__c</fullName>
        <description>Insurance Group Identifier</description>
        <label>Insurance Group</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Insurance_ID__c</fullName>
        <description>Plan ID number</description>
        <label>Insurance ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Insurance_Other__c</fullName>
        <description>Other insurance plan identification information</description>
        <label>Insurance Other</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Medical_Conditions__c</fullName>
        <description>General health/medical conditions that we should be aware of.</description>
        <label>Medical Conditions</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Shuttle_from_VCC_to_Airport__c</fullName>
        <label>Shuttle from VCC to Airport</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Shuttle_home_from_Airport_to_VCC__c</fullName>
        <label>Shuttle home from Airport to VCC</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <description>State of emergency contact</description>
        <label>State</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street_Address__c</fullName>
        <description>Street address of emergency contact</description>
        <label>Street Address</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zip_Code__c</fullName>
        <description>Zip code of emergency Contact</description>
        <label>Zip Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>Medical Detail</label>
    <nameField>
        <displayFormat>MD-{0000}</displayFormat>
        <label>Medical Detail Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Medical Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>